--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@
                 fuchsia: '#d946ef',
                 blue: '#3b82f6'
               },
-              deep: {
-                navy: '#020617',
-                charcoal: '#0f172a'
-              }
             },
             animation: {
               'pulse-fast': 'pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-              'glitch': 'glitch 1s linear infinite',
+              'glitch': 'glitch 2.5s infinite',
               'float': 'float 6s ease-in-out infinite',
             },
             keyframes: {
@@ -36,9 +32,12 @@
                 '50%': { transform: 'translateY(-10px)' },
               },
               glitch: {
-                '2%, 64%': { transform: 'translate(2px,0) skew(0deg)' },
-                '4%, 60%': { transform: 'translate(-2px,0) skew(0deg)' },
-                '62%': { transform: 'translate(0,0) skew(5deg)' },
+                '0%': { transform: 'translate(0)' },
+                '20%': { transform: 'translate(-2px, 2px)' },
+                '40%': { transform: 'translate(-2px, -2px)' },
+                '60%': { transform: 'translate(2px, 2px)' },
+                '80%': { transform: 'translate(2px, -2px)' },
+                '100%': { transform: 'translate(0)' },
               }
             }
           },
@@ -51,45 +50,85 @@
         color: white;
         overflow-x: hidden;
       }
+      
+      /* Advanced Glassmorphism */
       .glass-card {
-        background: rgba(255, 255, 255, 0.03);
+        background: rgba(15, 23, 42, 0.6);
         backdrop-filter: blur(16px);
         -webkit-backdrop-filter: blur(16px);
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        border: 1px solid rgba(255, 255, 255, 0.08);
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
       }
-      .neon-text-cyan {
-        text-shadow: 0 0 10px rgba(6, 182, 212, 0.7), 0 0 20px rgba(6, 182, 212, 0.5);
+
+      /* CRT Scanline Effect */
+      body::after {
+        content: " ";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.03));
+        z-index: 2;
+        background-size: 100% 2px, 3px 100%;
+        pointer-events: none;
       }
-      .neon-text-magenta {
-        text-shadow: 0 0 10px rgba(217, 70, 239, 0.7), 0 0 20px rgba(217, 70, 239, 0.5);
+
+      /* Glitch Text Effect */
+      .glitch-wrapper {
+        position: relative;
       }
-      /* Custom Scrollbar */
-      ::-webkit-scrollbar {
-        width: 8px;
+      .glitch-wrapper::before,
+      .glitch-wrapper::after {
+        content: attr(data-text);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0.8;
       }
-      ::-webkit-scrollbar-track {
-        background: #0f172a;
+      .glitch-wrapper::before {
+        color: #0ff;
+        z-index: -1;
+        animation: glitch-anim-1 2s infinite linear alternate-reverse;
       }
-      ::-webkit-scrollbar-thumb {
-        background: #334155;
-        border-radius: 4px;
+      .glitch-wrapper::after {
+        color: #f0f;
+        z-index: -2;
+        animation: glitch-anim-2 2s infinite linear alternate-reverse;
       }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #06b6d4;
+
+      @keyframes glitch-anim-1 {
+        0% { clip-path: inset(20% 0 80% 0); transform: translate(-2px, 1px); }
+        20% { clip-path: inset(60% 0 10% 0); transform: translate(2px, -1px); }
+        40% { clip-path: inset(40% 0 50% 0); transform: translate(-2px, 2px); }
+        60% { clip-path: inset(80% 0 5% 0); transform: translate(1px, -2px); }
+        80% { clip-path: inset(10% 0 60% 0); transform: translate(-1px, 1px); }
+        100% { clip-path: inset(30% 0 30% 0); transform: translate(2px, -1px); }
+      }
+
+      @keyframes glitch-anim-2 {
+        0% { clip-path: inset(10% 0 60% 0); transform: translate(2px, -1px); }
+        20% { clip-path: inset(80% 0 5% 0); transform: translate(-2px, 2px); }
+        40% { clip-path: inset(30% 0 30% 0); transform: translate(2px, 1px); }
+        60% { clip-path: inset(50% 0 20% 0); transform: translate(-1px, -2px); }
+        80% { clip-path: inset(20% 0 80% 0); transform: translate(1px, 2px); }
+        100% { clip-path: inset(70% 0 10% 0); transform: translate(-2px, -1px); }
       }
     </style>
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "react": "https://aistudiocdn.com/react@^19.2.1",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "vite": "https://aistudiocdn.com/vite@^7.2.6",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.10.1",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "firebase/": "https://esm.sh/firebase@^12.6.0/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1",
+    "vite": "https://esm.sh/vite@^7.2.7",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
